# pacman_vision

./: .cs_workspaces  .gitmodules  CMakeLists.txt  README.md  package.xml
QtCreator_projects/Basic_Node_Gui/: Basic_Node_Gui.pro  basic_node_gui.cpp
QtCreator_projects/Listener_Gui/: Listener_Gui.pro
QtCreator_projects/Recognition_Gui/: Recognition_Gui.pro
UI/gui/: application.cpp  application.h  dummy_test_main.cpp  gui.pro  gui.pro.user.62dbf3f  mainwindow.cpp  mainwindow.h  mainwindow.ui
UI/resources/: resources.qrc
cmake/: config_h.cmake.in
cmake/Modules/: FindVCG.cmake
config/: DR54.yaml  default.yaml  delta.yaml  holo.yaml  modeler.yaml  pacmanvision.rviz
include/basic_node/: basic_node.h  basic_node_config.hpp  basic_node_gui.h  kinect2_processor.h  sensor_config.hpp  sensor_processor.h
include/common/: box.h  common_pcl.h  common_ros.h  common_std.h  dynamic_modules.hpp  modules_config.hpp  random_generation.hpp  storage.h
include/listener/: listener.h  listener_config.hpp  vito_geometry.h
include/modeler/: modeler.h  modeler_config.hpp
include/recognition/: estimator.h  estimator_config.hpp  tracker.h  tracker_config.hpp
include/scene_processing/: scene_processing.h
launch/: pacman_vision.launch  pacv_with_vito_simulation.launch
node/: .gitignore  CMakeLists.txt  package.xml
node/cfg/: TrackerDemo.perspective  config.rviz  pacman_vision.barebone.cfg  pacman_vision.cfg  pacman_vision.complete.cfg  pacman_vision.nokinect2.cfg  pacman_vision.nopel.cfg
node/cmake/: config_h.cmake.in  package_xml.cmake.in
node/include/pacman_vision/: __broadcaster.h  __in_hand_modeler.h  __kinect2_processor.h  __tracker.h  __vision_node.h  __vito_listener.h  base_ros_node_helpers.hpp  basic_node.h  basic_node.hpp  box.h  broadcaster.h  common.h  dynamic_modules.hpp  estimator.h  estimator.hpp  in_hand_modeler.h  kinect2_processor.h  module_config.h  modules.h  pose_scanner.h  processor.h  sensor_processor.h  sensor_processor.hpp  storage.h  supervoxels.h  tracker.h  utility.h  utility.hpp  vision_node.h  vito_geometry.h  vito_listener.h
node/launch/: pacman_vision.launch  pacman_vision.xml
node/params/: DR54.yaml  default.yaml  desk.yaml  kuka_head.yaml  pacman_demo.yaml  scanner.yaml
node/src/: __kinect2_processor.cpp  __tracker.cpp  __vision_node.cpp  __vito_listener.cpp  basic_node.cpp  box.cpp  broadcaster.cpp  common.cpp  estimator.cpp  in_hand_modeler.cpp  kinect2_processor.cpp  main.cpp  node_utils.cpp  pose_estimation.cpp  pose_scanner.cpp  prova.cpp  scene_processing.cpp  sensor_processor.cpp  storage.cpp  supervoxels.cpp  tracker.cpp  utility.cpp  vision_node.cpp  vito_listener.cpp
params/: DR54.yaml  scanner.yaml  tracker.yaml
resources/: resources.qrc
src/: .scene_processing.cpp.swp  .vision_node.cpp.swp  pacman_vision.cpp  scene_processing.cpp
src/basic_node/: CMakeLists.txt  basic_node.cpp  kinect2_processor.cpp  sensor_processor.cpp
src/basic_node/gui/: CMakeLists.txt  basic_node_gui.cpp  basic_node_gui.h  basic_node_gui.ui  dummy_qtcreator_main.cpp
src/common/: CMakeLists.txt  box.cpp  common_pcl.cpp  common_ros.cpp  common_std.cpp  storage.cpp
src/listener/: CMakeLists.txt  listener.cpp
src/listener/gui/: CMakeLists.txt  dummy_qtcreator_main.cpp  listener_gui.cpp  listener_gui.h  listener_gui.ui
src/modeler/: CMakeLists.txt  modeler.cpp
src/pacman_vision/: main.cpp  pacman_vision.cpp  pacman_vision.h  servicer.hpp
src/recognition/: CMakeLists.txt  estimator.cpp  tracker.cpp
src/recognition/gui/: CMakeLists.txt  dummy_qtcreator_main.cpp  estimator_gui.cpp  estimator_gui.h  estimator_gui.ui  tracker_gui.cpp  tracker_gui.h  tracker_gui.ui
