<?xml version="1.0"?>
<!--
     Package xml format2.
     See here http://www.ros.org/reps/rep-0140.html#id28
-->
<package format="2">
  <name>pacman_vision</name>
  <version>6.6.6</version>
  <description>The PaCMan_Vision modular node</description>

  <maintainer email="fspinelli@gmail.com">Tabjones</maintainer>
  <license>PaCMaN</license>
  <author email="fspinelli@gmail.com">Tabjones</author>

  <!-- Use buildtool_depend for build tool packages: either catkin or cmake-->
  <!-- Use build_depend for packages you need at compile time: -->
  <!-- Use exec_depend for packages you need when executing the package: -->
  <!-- Use depend as alias for build_depend and exec_depend -->
  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>sensor_msgs</depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>visualization_msgs</depend>
  <depend>tf</depend>
  <depend>pacman_vision_comm</depend>

  <exec_depend>asus_scanner_models</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>calibration</exec_depend>

  <depend>pel</depend>

  <export>
  </export>

</package>
