<?xml version="1.0"?>
<package>
  <name>pacman_vision</name>
  <version>0.0.1</version>
  <description>The PaCMan vision node</description>

  <maintainer email="fspinelli@gmail.com">Tabjones</maintainer>
  <license>PaCMaN</license>
  <author email="fspinelli@gmail.com">Tabjones</author> -->

  <!-- Use build_depend for packages you need at compile time: -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!-- Use test_depend for packages you need only for testing: -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>pacman_vision_comm</build_depend>
  <run_depend>asus_scanner_models</run_depend>
  <run_depend>calibration</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>pacman_vision_comm</run_depend>
  <run_depend>message_runtime</run_depend>

  <export>
  </export>
</package>
